<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="ASSIGN_COLUMN" Id="{6eb080dd-2815-4167-8240-e347597517d8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ASSIGN_COLUMN
VAR
	//<Read AMS Net ID>
	fbGetLocalNetID					: FB_GetLocalAmsNetId;
	
	tTimeOut  						: TIME := DEFAULT_ADS_TIMEOUT;
	bBusy      						: BOOL;
    bError     						: BOOL;
    nErrId     						: UDINT;
    AddrString 						: STRING; //T_AmsNetId;
    AddrBytes  						: T_AmsNetIdArr;
	iReadNetIDStep					: INT;
	sColumnName						: STRING;
	
	iColumn							: UINT;
//</Read AMS Net ID>
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//	State machine
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

//<Read AMS Net ID>
	CASE iReadNetIDStep OF 
		0: (*Idle*)
		
			(*State changed*)
			
			(*Action*)
			
			(*Transition*)
			IF bGetAMSNetID THEN 
				iReadNetIDStep										:= 1; // XXX
			END_IF
			
		1: (*XXX*)
		
			(*State changed*)
			
			(*Action*)
			IsNetIDReadOK											:= FALSE;
			
			fbGetLocalNetID(
				bExecute											:= TRUE , 
				tTimeOut											:= T#3000MS , 
				bBusy												=> bBusy, 
				bError												=> bError, 
				nErrId												=> nErrId, 
				AddrString											=> AddrString, 
				AddrBytes											=> AddrBytes);
			
			(*Transition*)
								
			IF (NOT fbGetLocalNetID.bBusy) THEN
				IF (NOT fbGetLocalNetID.bError) THEN
					IsNetIDReadOK									:= TRUE;
					iReadNetIDStep									:= 2;
				ELSE
					;
				END_IF
			END_IF
			
		2: (**)
		
			(*State changed*)
			
			(*Action*)
			fbGetLocalNetID(	
				bExecute											:= FALSE , 
				tTimeOut											:= T#3000MS , 
				bBusy												=> bBusy, 
				bError												=> bError, 
				nErrId												=> nErrId, 
				AddrString											=> AddrString, 
				AddrBytes											=> AddrBytes);
				
			(*Transition*)
			iReadNetIDStep											:= 3;
			
		3: (**)
		
			(*State changed*)
			
			(*Action*)
			FOR iColumn:= 1 TO NO_OF_COLUMN DO
				IF ARR_AMS_NET_ID[iColumn] = AddrString THEN
					IF bDebugCart AND AddrString = '192.168.1.5.1.1' THEN
						bDebugCart									:= FALSE;
						bDebugStation								:= TRUE;
						Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= '==================================================');		
						Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= CONCAT('AUTO ASIGNED COLUMN NAME ::', 'DEBUG STATION'));			
						Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= '==================================================');
					END_IF
					
					//IF ARR_COL_MOD_ID[iColumn]<> COLUMN_NAME THEN
					//	IsNetIDReadOK := FALSE;
					//END_IF
					COLUMN_NAME										:= ARR_COL_MOD_ID[iColumn];
					IsNetIDReadOK 									:= TRUE;
					iTCColumnID										:=F_GetColumnID(eColumnID:=COLUMN_NAME, sColName=>sColumnName);
					Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= '==================================================');
					Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= CONCAT('Local AMS Net ID ::', AddrString));			
					Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= CONCAT('AUTO ASIGNED COLUMN NAME ::', sColumnName));			
					Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= '==================================================');
        			EXIT;
				ELSE
					IsNetIDReadOK 									:= FALSE;
				END_IF
			END_FOR
			
			IF (NOT bProductionMode) THEN
				IsNetIDReadOK										:= TRUE;
			END_IF
			
			IF (NOT IsNetIDReadOK) THEN
				Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX');
				Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= CONCAT('Invalid Local AMS Net ID ::', AddrString));			
				Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= CONCAT('DEFAULT COLUMN NAME ::', sColumnName));			
				Logging.fbDebugLog.M_nLogger(iLogLevel:= Logging.fbDebugLog.P_iLogVerbosity, sSource:= '', sMessage:= 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX');
			END_IF
				
			(*Transition*)
			iReadNetIDStep											:= -1; // Only execute get local Net ID one tiime
	END_CASE

//</Read AMS Net ID>]]></ST>
    </Implementation>
    <LineIds Name="ASSIGN_COLUMN">
      <LineId Id="112" Count="2" />
      <LineId Id="110" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="6" Count="2" />
      <LineId Id="118" Count="3" />
      <LineId Id="117" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="109" Count="0" />
      <LineId Id="123" Count="4" />
      <LineId Id="129" Count="0" />
      <LineId Id="131" Count="1" />
      <LineId Id="138" Count="0" />
      <LineId Id="133" Count="4" />
      <LineId Id="130" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="19" Count="5" />
      <LineId Id="139" Count="1" />
      <LineId Id="25" Count="1" />
      <LineId Id="141" Count="4" />
      <LineId Id="27" Count="1" />
      <LineId Id="146" Count="0" />
      <LineId Id="29" Count="5" />
      <LineId Id="148" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="149" Count="3" />
      <LineId Id="37" Count="2" />
      <LineId Id="84" Count="1" />
      <LineId Id="87" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="40" Count="13" />
      <LineId Id="55" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="174" Count="3" />
      <LineId Id="56" Count="4" />
      <LineId Id="62" Count="0" />
      <LineId Id="153" Count="1" />
      <LineId Id="63" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>